<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/sort_dialog"
android:layout_width="match_parent"
android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/filterSelectorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sort_dialog_title"
            android:layout_margin="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/sort_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/bottomBar">

        <RadioButton
            android:id="@+id/sort_a_z"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_sort_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/sort_a_z"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/sort_distance"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_sort_selector"
            android:button="@android:color/transparent"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/sort_distance"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/sort_nedocs"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_sort_selector"
            android:button="@android:color/transparent"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/sort_nedocs"
            android:textColor="@color/black" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
